16_subseq/grade.txt
Grading at Mon May 18 17:34:50 UTC 2020
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:21:10: error: ‘max’ undeclared (first use in this function)
   return max;
          ^
maxSeq.c:21:10: note: each undeclared identifier is reported only once for each function it appears in
maxSeq.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
